# SLhaircapture

./: OAOAOAOAOBOBOB  .gitignore  README.md  facedetect
SLhaircapture/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cvCalibrateProCam.cpp  cvScanProCam.cpp  cvScanProCam.h  cvStructuredLight.cpp  cvStructuredLight.hpp  cvUtilProCam.cpp  cvUtilProCam.h  pattern_gen.cpp  stdafx.h  temp
SLhaircapture/output/output/: depth_map_range.xml
SLhaircapture/output_1280/output/: depth_map_range.xml
SLhaircapture/output_shifting/output/: depth_map_range.xml
tutorial/cvStructuredLight/: MIT_License.txt  README.txt  cvStructuredLight.sln
tutorial/cvStructuredLight/Logitech9000/: Bayer.sln  Bayer.vcproj  ReadMe.txt  main.cpp
tutorial/cvStructuredLight/Matlab/: displayCalib.m  opencv_read.m
tutorial/cvStructuredLight/Matlab/xml_io_tools/: xml_read.m
tutorial/cvStructuredLight/Release/: config.xml
tutorial/cvStructuredLight/cvStructuredLight/: cvCalibrateProCam.cpp  cvScanProCam.cpp  cvStructuredLight.cpp  cvStructuredLight.vcproj  cvUtilProCam.cpp  stdafx.h
